force-app/main/default/objects/GfContract__c/GfContract__c.object-meta.xml
<CustomObject>
    <label>계약서</label>
    <nameField>
        <displayFormat>GC{YYYYMMDD}-{00000}</displayFormat>
        <label>Contract Number</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>