force-app/main/default/objects/GfContract__c/fields/CompanySigned__c.field-meta.xml
<CustomField>
    <fullName>CompanySigned__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Company Signed</label>
    <referenceTo>User</referenceTo>
    <relationshipName>CompanySignedRelationship</relationshipName>
    <type>Lookup</type>
</CustomField>