force-app/main/default/objects/GfContract__c/fields/CompanySignedDate__c.field-meta.xml
<CustomField>
    <fullName>CompanySignedDate__c</fullName>
    <label>Company Signed Date</label>
    <type>Date</type>
</CustomField>