force-app/main/default/objects/GfContract__c/fields/ContractName__c.field-meta.xml
<CustomField>
    <fullName>ContractName__c</fullName>
    <label>Contract Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>