force-app/main/default/objects/GfContract__c/fields/CustomerSigned__c.field-meta.xml
<CustomField>
    <fullName>CustomerSigned__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer Signed</label>
    <referenceTo>User</referenceTo>
    <relationshipName>CustomerSignedRelationship</relationshipName>
    <type>Lookup</type>
</CustomField>