force-app/main/default/objects/GfContract__c/fields/CustomerSignedDate__c.field-meta.xml
<CustomField>
    <fullName>CustomerSignedDate__c</fullName>
    <label>Customer Signed Date</label>
    <type>Date</type>
</CustomField>