force-app/main/default/objects/GfContract__c/fields/CustomerSignedTitle__c.field-meta.xml
<CustomField>
    <fullName>CustomerSignedTitle__c</fullName>
    <label>Customer Signed Title</label>
    <length>40</length>
    <type>Text</type>
</CustomField>