force-app/main/default/objects/GfContract__c/fields/FmDiscount__c.field-meta.xml
<CustomField>
    <fullName>FmDiscount__c</fullName>
    <formula>IF(RuListAmount__c = 0, 0, ((RuListAmount__c  -  RuSaleAmount__c  ) /  RuListAmount__c) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Discount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>