force-app/main/default/objects/GfContract__c/fields/RuListAmount__c.field-meta.xml
<CustomField>
    <fullName>RuListAmount__c</fullName>
    <label>List Amount</label>
    <summarizedField>ContractItem__c.FmListAmout__c</summarizedField>
    <summaryForeignKey>ContractItem__c.GfContract__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>