force-app/main/default/objects/GfContract__c/fields/RuSaleAmount__c.field-meta.xml
<CustomField>
    <fullName>RuSaleAmount__c</fullName>
    <label>Sale Amount</label>
    <summarizedField>ContractItem__c.FmSaleAmount__c</summarizedField>
    <summaryForeignKey>ContractItem__c.GfContract__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>