force-app/main/default/objects/GfContract__c/fields/SpecialTerms__c.field-meta.xml
<CustomField>
    <fullName>SpecialTerms__c</fullName>
    <label>Special Terms</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>